--- a/_posts/2018-03-25-create-ap.theme.md
+++ b/_posts/2018-03-25-create-ap.theme.md
@@ -1,23 +1,23 @@
 ---
 layout: post
-title:  "Create AP theme"
-info: "Create About/Portfolio theme"
-tech : "ruby, jekyll"
-type: Toy
+title:  "TrainCKDis workshop in Berlin"
+info: "Presenting PhD project for the consortium"
+location : "Charite University in Berlin"
+date: "15-16 May 2023"
 ---
 
-## Create AP theme
-This is about the ap project.  
-I had a management page for my career.  
-But this time, I decided to change to the github page.  
-By the way, I did not have a favorite theme, so I customized it myself.  
+## Presenting PhD project for the consortium
+I presented the results of teh second chapter of my PhD project on haplotypes association anslysis.  
+The audience were TrainCKDis consortium internal members.  
+I got a few benefitial feedbacks/suggestions from Dr. Terzi, Prof. Peters, and Prof. Koettgen.  
+By the way, I tried to answer their questions by running proper analyses.  
 
 
-## Tech
-Now that I have a github page, I need to know ruby and jekyll.  
-And, html, js, css or so?  
+## Location
+The workshop was held at Charite University zum Berlin in Berlin, Germany.  
+The organization was quite decent and the food was better than my previous time at MDC institute in November 2021.  
 
 
-## Duration
-It did not take long to change the existing theme.  
-I made it by modifying the ["tale"](https://github.com/chesterhow/tale) theme.  
+## Training sessions
+It was maninly focused on teh scientific communication.  
+This is the website of the holder of the sessions ["Russ Hodge"](https://goodsciencewriting.com/) from MDC Berlin.  
